@@ -4,9 +4,9 @@
 * Should emulate some kind of Flickr JSON callback : ?callback=json&format=json&api_key=1234567890&method=search&term=myterm
 
 * 
+* @version      1.1.0
 * @author 		Alex Rabe 
 * @copyright 	Copyright 2010
-* @since		1.5.0
 * @require		PHP 5.2.0 or higher
 * 
 */
@@ -22,11 +22,12 @@ class nggAPI {
 	  */
     var $format		=	false;		// $_GET['format'] 	: Return a XML oder JSON output
 	var $api_key	=	false;		// $_GET['api_key']	: Protect the access via a random key (required if user is not logged into backend)
-	var $method		=	false;		// $_GET['method']	: search | gallery | image |tag
+	var $method		=	false;		// $_GET['method']	: search | gallery | image | tag | autocomplete
 	var $term		=	false;		// $_GET['term']   	: The search term (required for method search | tag)
 	var $id			=	false;		// $_GET['id']	  	: gallery or image id (required for method gallery | image)
-	var $limit		=	false;		// $_GET['limit']	: maxium of images which we request
-
+	var $limit		=	false;		// $_GET['limit']	: maximum of images which we request
+    var $type		=	false;		// $_GET['type']	: gallery | image | album (required for method autocomplete)
+    
 	/**
 	 * Contain the final output
 	 *
@@ -63,8 +64,10 @@ class nggAPI {
 		$this->method 	= isset($_GET['method']) ? strtolower( $_GET['method'] ) : false; 
 		$this->term		= isset($_GET['term'])   ? strtolower( $_GET['term'] ) : false; 
 		$this->id 		= isset($_GET['id'])     ? (int) $_GET['id'] : 0;
-		$this->limit 	= isset($_GET['limit'])  ? (int) $_GET['limit'] : 0;		
+		$this->limit 	= isset($_GET['limit'])  ? (int) $_GET['limit'] : 0;
+        $this->type		= isset($_GET['type'])   ? strtolower( $_GET['type'] ) : false; 		
 		$this->result	= array();
+        $this->list     = false;
 		
 		$this->start_process();
 		$this->render_output();
@@ -96,6 +99,10 @@ class nggAPI {
 				//search for images based on tags
 				$this->result['images'] = nggdb::find_last_images( 0 , $this->limit );
 			break;
+			case 'autocomplete' :
+				//return images, galleries or albums for autocomplete drop down list
+				return $this->autocomplete();                
+			break;
 			default :
 				$this->result = array ('stat' => 'fail', 'code' => '98', 'message' => 'Method not known.');
 				return false;	
@@ -119,6 +126,83 @@ class nggAPI {
 		$this->result = array ('stat' => 'fail', 'code' => '99', 'message' => 'Insufficient permissions. Method requires read privileges; none granted.');
 		return false;
 	}
+
+	/**
+	 * return search result for autocomplete request from backend
+	 * 
+     * @since 1.7.0
+	 * @return void
+	 */
+	function autocomplete() {
+        global $nggdb;
+        
+        switch ( $this->type ) {
+			case 'image' :
+            
+                // return the last entries in case of an empty search string
+                if ( empty($this->term) )
+				    $list = $nggdb->find_last_images(0, $this->limit, false);
+                else
+                    $list = $nggdb->search_for_images($this->term, $this->limit);
+                    
+                if( is_array($list) ) {
+        			foreach($list as $image) {
+                        // reorder result to array-object
+                        $obj = new stdClass();
+                        $obj->id = $image->pid;
+                        $obj->label = $image->pid . ' - ' . $image->filename;
+                        $obj->value = $image->filename;
+                        $this->result[] = $obj;
+        			}
+        		}
+
+                return $this->result;
+            break;
+			case 'gallery' :
+            
+                if ( empty($this->term) )
+                    $list = $nggdb->find_all_galleries('gid', 'DESC', false, $this->limit );
+                else
+                    $list = $nggdb->search_for_galleries($this->term, $this->limit);   
+                     
+                if( is_array($list) ) {
+        			foreach($list as $gallery) {
+                        // reorder result to array-object
+                        $obj = new stdClass();
+                        $obj->id = $gallery->gid;
+                        $name = ( empty($gallery->title) ) ? $gallery->name : $gallery->title;
+                        $obj->label = $gallery->gid . ' - ' . $name;
+                        $obj->value = $name;
+                        $this->result[] = $obj;
+        			}
+        		}
+                return $this->result;
+            break;
+			case 'album' :
+            
+                if ( empty($this->term) )
+                    $list = $nggdb->find_all_album('id', 'DESC', $this->limit );
+                else
+                    $list = $nggdb->search_for_albums($this->term, $this->limit); 
+                                    
+                if( is_array($list) ) {
+        			foreach($list as $album) {
+                        // reorder result to array-object            			 
+                        $obj = new stdClass();
+                        $obj->id = $album->id;
+                        $obj->label = $album->id . ' - ' . $album->name;
+                        $obj->value = $album->name;
+                        $this->result[] = $obj;
+        			}
+        		}
+                return $this->result;
+            break;
+			default :
+				$this->result = array ('stat' => 'fail', 'code' => '98', 'message' => 'Type not known.');
+				return false;	
+			break;	
+        }
+    }
 
     /**
      * Iterates through a multidimensional array
